# time_bandit_web

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: .gitignore  Cargo.toml
backend/migrations/: 20231126054052_create_users_table.up.sql  20231126054136_create_tasks_table.down.sql  20231126155545_create_events_table.down.sql  20231126155545_create_events_table.up.sql  20231202214009_sessions.up.sql  20231202215416_extend_users_table.up.sql
backend/src/: main.rs  models.rs  store.rs
backend/src/routes/: auth.rs  events.rs  mod.rs  tasks.rs  users.rs
migrations/: 20231126054136_create_tasks_table.up.sql  20231202214009_sessions.down.sql  20231202215416_extend_users_table.down.sql
src/: main.rs  models.rs  store.rs
src/app/: layout.tsx  page.tsx
src/app/bandit/: layout.tsx  page.tsx
src/app/bandit/account/: page.tsx
src/app/bandit/dashboard/: page.tsx
src/app/bandit/tasks/[id]/: page.tsx
src/app/dashboard/: page.tsx
src/components/: ClientWrapper.tsx  DisplayTimer.tsx  Navbar.tsx  NewTaskModal.tsx  StartEventModal.tsx  Timer.tsx  login.tsx
src/features/: TaskView.tsx
src/features/dashboard/: Dashboard.tsx  DashboardRecentTaskBarChart.tsx  OverviewTasks.tsx
src/features/tasks/: TaskEventStart.tsx  TaskEventsLineChart.tsx  TaskStart.tsx  TaskView.tsx
src/utils/: Session.tsx  time.ts
