[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version ="0.6.20", features =["macros"]}
axum-extra = { version = "0.9.0", features = ["cookie-private", "cookie"] }
bcrypt = "0.15.0"
chrono = { version ="0.4.31", features = ["serde"] }
dotenv = "0.15.0"
http = "1.0.0"
lettre = "0.11.2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = [  "runtime-tokio", "postgres",  "chrono", "uuid" ] }
time = "0.3.30"
tokio = {version ="1", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.4.4", features =["cors", "trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
version = "1.6.1"
features = ["v4",  "macro-diagnostics", "serde"]
